--- a/output.css
+++ b/output.css
@@ -703,18 +703,6 @@ video {
   margin-top: 0.5rem;
 }
 
-.mt-\[10rem\] {
-  margin-top: 10rem;
-}
-
-.mt-\[15rem\] {
-  margin-top: 15rem;
-}
-
-.mt-\[5rem\] {
-  margin-top: 5rem;
-}
-
 .mt-\[18rem\] {
   margin-top: 18rem;
 }
@@ -819,12 +807,24 @@ video {
   height: 100vh;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
+.h-20 {
+  height: 5rem;
+}
+
 .w-full {
   width: 100%;
 }
 
 .max-w-\[1240px\] {
   max-width: 1240px;
+}
+
+.max-w-\[\] {
+  max-width: ;
 }
 
 .flex-shrink {
@@ -1703,6 +1703,11 @@ video {
   background-color: rgb(0 0 0 / 0.9);
 }
 
+.bg-white {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
 .decoration-slice {
   -webkit-box-decoration-break: slice;
           box-decoration-break: slice;
@@ -1898,6 +1903,11 @@ video {
   vertical-align: super;
 }
 
+.text-2xl {
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -1911,11 +1921,6 @@ video {
 .text-xl {
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-2xl {
-  font-size: 1.5rem;
-  line-height: 2rem;
 }
 
 .font-bold {
@@ -1999,9 +2004,9 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.text-gray-400 {
+.text-gray-500 {
   --tw-text-opacity: 1;
-  color: rgb(156 163 175 / var(--tw-text-opacity));
+  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -2343,6 +2348,10 @@ html{
   left: 0;
 }
 
+.nav-white{
+  background-color: azure;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
@@ -2413,11 +2422,6 @@ html{
 
   .sm\:hidden {
     display: none;
-  }
-
-  .sm\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
   }
 
   .sm\:text-7xl {
