--- a/input.css
+++ b/input.css
@@ -12,6 +12,6 @@ html{
 .nav-active{
     left: 0;
 }
-.nav-white{
-    background-color: azure;
+.card-img{
+    background-image: url('./images/about-img.jpg');
 }
