--- a/output.css
+++ b/output.css
@@ -695,16 +695,16 @@ video {
   margin-right: auto;
 }
 
-.ml-\[-8rem\] {
-  margin-left: -8rem;
+.ml-\[-1rem\] {
+  margin-left: -1rem;
 }
 
 .mt-2 {
   margin-top: 0.5rem;
 }
 
-.mt-\[18rem\] {
-  margin-top: 18rem;
+.mt-\[12rem\] {
+  margin-top: 12rem;
 }
 
 .box-border {
@@ -799,20 +799,24 @@ video {
   display: none;
 }
 
-.h-16 {
-  height: 4rem;
+.h-20 {
+  height: 5rem;
+}
+
+.h-\[320px\] {
+  height: 320px;
+}
+
+.h-\[700px\] {
+  height: 700px;
 }
 
 .h-screen {
   height: 100vh;
 }
 
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-20 {
-  height: 5rem;
+.w-\[1240px\] {
+  width: 1240px;
 }
 
 .w-full {
@@ -821,10 +825,6 @@ video {
 
 .max-w-\[1240px\] {
   max-width: 1240px;
-}
-
-.max-w-\[\] {
-  max-width: ;
 }
 
 .flex-shrink {
@@ -1703,6 +1703,11 @@ video {
   background-color: rgb(0 0 0 / 0.9);
 }
 
+.bg-fuchsia-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(253 244 255 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
@@ -1908,6 +1913,11 @@ video {
   line-height: 2rem;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .text-4xl {
   font-size: 2.25rem;
   line-height: 2.5rem;
@@ -2004,9 +2014,14 @@ video {
   color: rgb(59 130 246 / var(--tw-text-opacity));
 }
 
-.text-gray-500 {
+.text-gray-300 {
   --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
+  color: rgb(209 213 219 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-white {
@@ -2204,6 +2219,12 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.shadow-2xl {
+  --tw-shadow: 0 25px 50px -12px rgb(0 0 0 / 0.25);
+  --tw-shadow-colored: 0 25px 50px -12px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2348,8 +2369,8 @@ html{
   left: 0;
 }
 
-.nav-white{
-  background-color: azure;
+.card-img{
+  background-image: url('./images/about-img.jpg');
 }
 
 @media (min-width: 640px) {
@@ -2416,6 +2437,14 @@ html{
 }
 
 @media (min-width: 640px) {
+  .sm\:m-2 {
+    margin: 0.5rem;
+  }
+
+  .sm\:ml-\[-9rem\] {
+    margin-left: -9rem;
+  }
+
   .sm\:flex {
     display: flex;
   }
@@ -2431,6 +2460,12 @@ html{
 
   .sm\:underline {
     text-decoration-line: underline;
+  }
+}
+
+@media (min-width: 768px) {
+  .md\:ml-\[-18rem\] {
+    margin-left: -18rem;
   }
 }
 
