--- a/output.css
+++ b/output.css
@@ -2428,25 +2428,25 @@ video {
   content: var(--tw-content);
 }
 
-html{
+html {
   scroll-behavior: smooth;
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
 }
 
-.custom-img{
-  background-image: url('./images/splach.jpg');
+.custom-img {
+  background-image: url("./images/splach.jpg");
 }
 
-.nav-active{
+.nav-active {
   left: 0;
 }
 
-.card-img{
-  background-image: url('./images/about-img.jpg');
+.card-img {
+  background-image: url("./images/about-img.jpg");
 }
 
-.services-img{
-  background-image: url('./images/services3.jpg');
+.services-img {
+  background-image: url("./images/services3.jpg");
 }
 
 /* @media screen and (max-width: 1024px)  {
@@ -2581,6 +2581,10 @@ html{
 
   .md\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .md\:bg-fixed {
+    background-attachment: fixed;
   }
 }
 
