--- a/input.css
+++ b/input.css
@@ -7,7 +7,9 @@ html {
   font-family: "Poppins", sans-serif;
 }
 .custom-img {
+  background-color: rgba(0, 0, 0, 0.478);
   background-image: url("./images/splach.jpg");
+  background-blend-mode: multiply;
 }
 .nav-active {
   left: 0;
