--- a/output.css
+++ b/output.css
@@ -2434,7 +2434,9 @@ html {
 }
 
 .custom-img {
+  background-color: rgba(0, 0, 0, 0.478);
   background-image: url("./images/splach.jpg");
+  background-blend-mode: multiply;
 }
 
 .nav-active {
