--- a/input.css
+++ b/input.css
@@ -7,7 +7,7 @@ html {
   font-family: "Poppins", sans-serif;
 }
 .custom-img {
-  background-color: rgba(0, 0, 0, 0.615);
+  background-color: rgba(0, 0, 0, 0.7);
   background-image: url("./images/splach.jpg");
   background-blend-mode: multiply;
 }
@@ -15,11 +15,14 @@ html {
   left: 0;
 }
 .card-img {
-  background-image: url("./images/about-img.jpg");
-}
-.services-img {
   background-image: url("./images/services3.jpg");
 }
+.services-img {
+  background-image: url("./images/services2.jpg");
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: multiply;
+}
+
 /* @media screen and (max-width: 1024px)  {
     .services-img{
         background-image: none;
