--- a/output.css
+++ b/output.css
@@ -695,11 +695,6 @@ video {
   margin-right: auto;
 }
 
-.my-8 {
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-
 .ml-\[-1rem\] {
   margin-left: -1rem;
 }
@@ -812,12 +807,8 @@ video {
   height: 5rem;
 }
 
-.h-\[320px\] {
-  height: 320px;
-}
-
-.h-\[700px\] {
-  height: 700px;
+.h-\[300px\] {
+  height: 300px;
 }
 
 .h-auto {
@@ -1168,10 +1159,6 @@ video {
   grid-auto-flow: column dense;
 }
 
-.grid-cols-2 {
-  grid-template-columns: repeat(2, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -1338,14 +1325,6 @@ video {
 
 .justify-items-stretch {
   justify-items: stretch;
-}
-
-.gap-4 {
-  gap: 1rem;
-}
-
-.gap-8 {
-  gap: 2rem;
 }
 
 .space-x-2 > :not([hidden]) ~ :not([hidden]) {
@@ -1629,10 +1608,6 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1728,10 +1703,6 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-black\/70 {
-  background-color: rgb(0 0 0 / 0.7);
-}
-
 .bg-black\/90 {
   background-color: rgb(0 0 0 / 0.9);
 }
@@ -1741,13 +1712,26 @@ video {
   background-color: rgb(253 244 255 / var(--tw-bg-opacity));
 }
 
-.bg-gray-400\/20 {
-  background-color: rgb(156 163 175 / 0.2);
-}
-
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-black\/60 {
+  background-color: rgb(0 0 0 / 0.6);
+}
+
+.bg-black\/10 {
+  background-color: rgb(0 0 0 / 0.1);
+}
+
+.bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
 }
 
 .decoration-slice {
@@ -1884,10 +1868,6 @@ video {
   padding: 1.5rem;
 }
 
-.p-8 {
-  padding: 2rem;
-}
-
 .px-4 {
   padding-left: 1rem;
   padding-right: 1rem;
@@ -1896,11 +1876,6 @@ video {
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
-}
-
-.py-4 {
-  padding-top: 1rem;
-  padding-bottom: 1rem;
 }
 
 .py-5 {
@@ -2291,12 +2266,6 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
-.shadow-xl {
-  --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
-  --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
 .outline-none {
   outline: 2px solid transparent;
   outline-offset: 2px;
@@ -2434,7 +2403,7 @@ html {
 }
 
 .custom-img {
-  background-color: rgba(0, 0, 0, 0.615);
+  background-color: rgba(0, 0, 0, 0.7);
   background-image: url("./images/splach.jpg");
   background-blend-mode: multiply;
 }
@@ -2444,11 +2413,13 @@ html {
 }
 
 .card-img {
-  background-image: url("./images/about-img.jpg");
+  background-image: url("./images/services3.jpg");
 }
 
 .services-img {
-  background-image: url("./images/services3.jpg");
+  background-image: url("./images/services2.jpg");
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: multiply;
 }
 
 /* @media screen and (max-width: 1024px)  {
@@ -2553,17 +2524,12 @@ html {
     display: none;
   }
 
-  .sm\:p-16 {
-    padding: 4rem;
+  .sm\:p-20 {
+    padding: 5rem;
   }
 
   .sm\:p-6 {
     padding: 1.5rem;
-  }
-
-  .sm\:px-20 {
-    padding-left: 5rem;
-    padding-right: 5rem;
   }
 
   .sm\:text-7xl {
@@ -2579,10 +2545,6 @@ html {
 @media (min-width: 768px) {
   .md\:ml-\[-18rem\] {
     margin-left: -18rem;
-  }
-
-  .md\:grid-cols-2 {
-    grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
   .md\:bg-fixed {
@@ -2601,10 +2563,6 @@ html {
 
   .lg\:h-screen {
     height: 100vh;
-  }
-
-  .lg\:grid-cols-4 {
-    grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
 
