--- a/output.css
+++ b/output.css
@@ -807,6 +807,10 @@ video {
   height: 5rem;
 }
 
+.h-\[200px\] {
+  height: 200px;
+}
+
 .h-\[300px\] {
   height: 300px;
 }
@@ -825,6 +829,10 @@ video {
 
 .w-\[1240px\] {
   width: 1240px;
+}
+
+.w-\[320px\] {
+  width: 320px;
 }
 
 .w-full {
@@ -1712,26 +1720,19 @@ video {
   background-color: rgb(253 244 255 / var(--tw-bg-opacity));
 }
 
+.bg-rose-50 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 241 242 / var(--tw-bg-opacity));
+}
+
+.bg-slate-200 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
+}
+
 .bg-white {
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-black\/60 {
-  background-color: rgb(0 0 0 / 0.6);
-}
-
-.bg-black\/10 {
-  background-color: rgb(0 0 0 / 0.1);
-}
-
-.bg-black\/20 {
-  background-color: rgb(0 0 0 / 0.2);
 }
 
 .decoration-slice {
@@ -2418,8 +2419,20 @@ html {
 
 .services-img {
   background-image: url("./images/services2.jpg");
-  background-color: rgba(0, 0, 0, 0.7);
+  background-color: rgba(0, 0, 0, 0.6);
   background-blend-mode: multiply;
+}
+
+.glide__arrows button{
+  color: black;
+}
+
+.glide{
+  border: 1px solid black;
+}
+
+.glide__track{
+  border: 1px solid black;
 }
 
 /* @media screen and (max-width: 1024px)  {
@@ -2468,6 +2481,11 @@ html {
   background-color: rgb(0 0 0 / 0.5);
 }
 
+.hover\:text-lg:hover {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .hover\:font-bold:hover {
   font-weight: 700;
 }
@@ -2475,6 +2493,11 @@ html {
 .hover\:text-gray-500:hover {
   --tw-text-opacity: 1;
   color: rgb(107 114 128 / var(--tw-text-opacity));
+}
+
+.hover\:text-orange-500:hover {
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
 .before\:hover\:text-center:hover::before {
@@ -2524,6 +2547,14 @@ html {
     display: none;
   }
 
+  .sm\:h-\[400px\] {
+    height: 400px;
+  }
+
+  .sm\:h-screen {
+    height: 100vh;
+  }
+
   .sm\:p-20 {
     padding: 5rem;
   }
@@ -2545,6 +2576,14 @@ html {
 @media (min-width: 768px) {
   .md\:ml-\[-18rem\] {
     margin-left: -18rem;
+  }
+
+  .md\:h-\[300px\] {
+    height: 300px;
+  }
+
+  .md\:w-\[550px\] {
+    width: 550px;
   }
 
   .md\:bg-fixed {
