Section services finished

--- a/input.css
+++ b/input.css
@@ -23,6 +23,97 @@ html {
   background-blend-mode: multiply;
 }
 
+/* Carousel */
+.carousel {
+  margin-top: 80px;
+  position: relative;
+  max-width: 840px;
+  max-height: 430px;
+  min-height: 150px;
+ 
+  overflow: hidden;
+}
+
+.carousel-item,
+.carousel-item-hidden {
+  display: none;
+}
+
+.carousel-item img {
+  width: 100%;
+  
+}
+
+.carousel-item-visible {
+  display: block;
+  -webkit-animation: fadeVisibility 2s;
+          animation: fadeVisibility 2s;
+}
+
+.carousel-actions {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  border: none;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* button {
+  border: none;
+  font-size: 30px;
+  font-weight: bold;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  opacity: 0.5;
+  cursor: pointer;
+} */
+
+#carousel-button-prev {
+  margin-left: 20px;
+  font-size: 2rem;
+  color: chocolate;
+}
+
+#carousel-button-next {
+  margin-right: 20px;
+  font-size: 2rem;
+  color: chocolate;
+}
+
+.carousel-text {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  border: none;
+  font-size: 1.4rem;
+  top: 10%;
+  left: 5%;
+  transform: translateY(50%);
+  color: whitesmoke;
+  text-shadow: 0px 0px 7px black;
+}
+
+@-webkit-keyframes fadeVisibility {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+@keyframes fadeVisibility {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 /* @media screen and (max-width: 1024px)  {
     .services-img{
         background-image: none;
