--- a/output.css
+++ b/output.css
@@ -807,10 +807,6 @@ video {
   height: 5rem;
 }
 
-.h-\[200px\] {
-  height: 200px;
-}
-
 .h-\[300px\] {
   height: 300px;
 }
@@ -829,10 +825,6 @@ video {
 
 .w-\[1240px\] {
   width: 1240px;
-}
-
-.w-\[320px\] {
-  width: 320px;
 }
 
 .w-full {
@@ -1616,6 +1608,10 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-lg {
+  border-radius: 0.5rem;
+}
+
 .rounded-b {
   border-bottom-right-radius: 0.25rem;
   border-bottom-left-radius: 0.25rem;
@@ -1711,6 +1707,10 @@ video {
   background-color: rgb(255 0 0 / var(--tw-bg-opacity));
 }
 
+.bg-black\/20 {
+  background-color: rgb(0 0 0 / 0.2);
+}
+
 .bg-black\/90 {
   background-color: rgb(0 0 0 / 0.9);
 }
@@ -1718,16 +1718,6 @@ video {
 .bg-fuchsia-50 {
   --tw-bg-opacity: 1;
   background-color: rgb(253 244 255 / var(--tw-bg-opacity));
-}
-
-.bg-rose-50 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 241 242 / var(--tw-bg-opacity));
-}
-
-.bg-slate-200 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(226 232 240 / var(--tw-bg-opacity));
 }
 
 .bg-white {
@@ -1857,6 +1847,10 @@ video {
   padding: 0.25rem;
 }
 
+.p-2 {
+  padding: 0.5rem;
+}
+
 .p-4 {
   padding: 1rem;
 }
@@ -1877,6 +1871,11 @@ video {
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
+}
+
+.py-2 {
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
 }
 
 .py-5 {
@@ -2423,16 +2422,85 @@ html {
   background-blend-mode: multiply;
 }
 
-.glide__arrows button{
-  color: black;
+/* Carousel */
+
+.carousel {
+  margin-top: 80px;
+  position: relative;
+  max-width: 840px;
+  max-height: 430px;
+  min-height: 150px;
+  overflow: hidden;
 }
 
-.glide{
-  border: 1px solid black;
+.carousel-item,
+.carousel-item-hidden {
+  display: none;
 }
 
-.glide__track{
-  border: 1px solid black;
+.carousel-item img {
+  width: 100%;
+}
+
+.carousel-item-visible {
+  display: block;
+  animation: fadeVisibility 2s;
+}
+
+.carousel-actions {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  position: absolute;
+  border: none;
+  top: 50%;
+  transform: translateY(-50%);
+}
+
+/* button {
+  border: none;
+  font-size: 30px;
+  font-weight: bold;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  opacity: 0.5;
+  cursor: pointer;
+} */
+
+#carousel-button-prev {
+  margin-left: 20px;
+  font-size: 2rem;
+  color: chocolate;
+}
+
+#carousel-button-next {
+  margin-right: 20px;
+  font-size: 2rem;
+  color: chocolate;
+}
+
+.carousel-text {
+  width: 100%;
+  display: flex;
+  position: absolute;
+  border: none;
+  font-size: 1.4rem;
+  top: 10%;
+  left: 5%;
+  transform: translateY(50%);
+  color: whitesmoke;
+  text-shadow: 0px 0px 7px black;
+}
+
+@keyframes fadeVisibility {
+  0% {
+    opacity: 0;
+  }
+
+  100% {
+    opacity: 1;
+  }
 }
 
 /* @media screen and (max-width: 1024px)  {
@@ -2547,14 +2615,6 @@ html {
     display: none;
   }
 
-  .sm\:h-\[400px\] {
-    height: 400px;
-  }
-
-  .sm\:h-screen {
-    height: 100vh;
-  }
-
   .sm\:p-20 {
     padding: 5rem;
   }
@@ -2578,16 +2638,13 @@ html {
     margin-left: -18rem;
   }
 
-  .md\:h-\[300px\] {
-    height: 300px;
-  }
-
-  .md\:w-\[550px\] {
-    width: 550px;
-  }
-
   .md\:bg-fixed {
     background-attachment: fixed;
+  }
+
+  .md\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
