--- a/output.css
+++ b/output.css
@@ -699,6 +699,11 @@ video {
   margin-right: auto;
 }
 
+.my-6 {
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
 .ml-\[-1rem\] {
   margin-left: -1rem;
 }
@@ -815,10 +820,6 @@ video {
   height: 9rem;
 }
 
-.h-\[300px\] {
-  height: 300px;
-}
-
 .h-auto {
   height: auto;
 }
@@ -829,6 +830,14 @@ video {
 
 .h-screen {
   height: 100vh;
+}
+
+.min-h-\[200px\] {
+  min-height: 200px;
+}
+
+.min-h-\[500px\] {
+  min-height: 500px;
 }
 
 .w-\[1240px\] {
@@ -1929,11 +1938,6 @@ video {
   padding-right: 1.5rem;
 }
 
-.py-14 {
-  padding-top: 3.5rem;
-  padding-bottom: 3.5rem;
-}
-
 .py-16 {
   padding-top: 4rem;
   padding-bottom: 4rem;
@@ -2156,11 +2160,6 @@ video {
 .text-white {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-500 {
-  --tw-text-opacity: 1;
-  color: rgb(107 114 128 / var(--tw-text-opacity));
 }
 
 .underline {
@@ -2529,11 +2528,11 @@ html {
 /* Carousel */
 
 .carousel {
-  margin-top: 80px;
+  margin-top: 40px;
   position: relative;
   max-width: 840px;
   max-height: 430px;
-  min-height: 150px;
+  min-height: 100px;
   overflow: hidden;
 }
 
@@ -2700,10 +2699,6 @@ html {
 }
 
 @media (min-width: 640px) {
-  .sm\:m-2 {
-    margin: 0.5rem;
-  }
-
   .sm\:ml-\[-9rem\] {
     margin-left: -9rem;
   }
@@ -2720,12 +2715,12 @@ html {
     display: none;
   }
 
-  .sm\:p-20 {
-    padding: 5rem;
-  }
-
   .sm\:p-6 {
     padding: 1.5rem;
+  }
+
+  .sm\:p-8 {
+    padding: 2rem;
   }
 
   .sm\:pt-14 {
@@ -2743,6 +2738,11 @@ html {
 }
 
 @media (min-width: 768px) {
+  .md\:mx-12 {
+    margin-left: 3rem;
+    margin-right: 3rem;
+  }
+
   .md\:ml-\[-18rem\] {
     margin-left: -18rem;
   }
@@ -2775,12 +2775,12 @@ html {
     display: flex;
   }
 
-  .lg\:h-\[460px\] {
-    height: 460px;
-  }
-
   .lg\:h-screen {
     height: 100vh;
+  }
+
+  .lg\:max-h-\[440px\] {
+    max-height: 440px;
   }
 
   .lg\:grid-cols-5 {
